chore: add all other tests
