# docs/swagger.yaml
@@ -17,8 +17,32 @@ info:
   version: "1.0"
 paths:
   /products:
+    delete:
+      consumes:
+      - application/json
+      description: Remove a product's information by name
+      parameters:
+      - description: Name of the product to delete
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+      summary: Delete a product by name
+      tags:
+      - products
     get:
-      description: Get all products
+      description: Get all products or retrieve a specific product by name. Name query
+        parameter is optional.
+      parameters:
+      - description: Name of the product to retrieve
+        in: query
+        name: name
+        type: string
       produces:
       - application/json
       responses:
@@ -28,7 +52,7 @@ paths:
             items:
               $ref: '#/definitions/main.Product'
             type: array
-      summary: List all products
+      summary: List all products or get a product by name
       tags:
       - products
     post:
@@ -50,6 +74,32 @@ paths:
           schema:
             $ref: '#/definitions/main.Product'
       summary: Create a new product
+      tags:
+      - products
+    put:
+      consumes:
+      - application/json
+      description: Update a product's information by name
+      parameters:
+      - description: Name of the product to update
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: Updated product object
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/main.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Product'
+      summary: Update a product by name
       tags:
       - products
   /products/{id}:
